     extensions could be useful.  This means Source file to LanguageVersion
     mapping is not 1-1, but 1-many, we'd need to deal with this accordingly.
   o Need to refactor the test framework to more readily support for multiple
     Languages (too Java centric at the moment).  Then, need start adding tests
     for the new XML language.

---

This version of PMD breaks API compatibility with prior versions of PMD, as well
as RuleSet XML compatibility.  The decision to break compatibility, allows PMD
internals and code organization to be improved to better handle additional
languages.  This opportunity was used to remove depreciated APIs, and beat up
any code which has thumbed its nose at the developers over the years. ;)

The following is relatively complete list of the major changes (this may not be
100% accurate, see actual source code when in doubt):

	API Change - Unification of treatment of languages within PMD core:
	   Added - net.sourceforge.pmd.lang.Language (now an 'enum')
	   Added - net.sourceforge.pmd.lang.LanguageVersion
	   Added - net.sourceforge.pmd.lang.LanguageVersionDiscoverer
	   Added - net.sourceforge.pmd.lang.LanguageVersionHandler
	   Added - net.sourceforge.pmd.lang.XPathHandler
	   Added - net.sourceforge.pmd.lang.ast.xpath.AbstractASTXPathHandler
	   Added - net.sourceforge.pmd.lang.xpath.Initializer
	   Added - net.sourceforge.pmd.lang.ast.AbstractTokenManager
	   Added - net.sourceforge.pmd.lang.ast.CharStream
	   Added - net.sourceforge.pmd.lang.ast.JavaCharStream
	   Added - net.sourceforge.pmd.lang.ast.SimpleCharStream
	   Added - net.sourceforge.pmd.lang.ast.TokenMgrError
	   Added - net.sourceforge.pmd.lang.rule.stat.StatisticalRule
	   Added - net.sourceforge.pmd.lang.rule.stat.StatisticalRuleHelper
	   Added - net.sourceforge.pmd.lang.java.rule.AbstractStatisticalJavaRule
	   Added - net.sourceforge.pmd.lang.rule.AbstractRuleViolationFactory
	   Added - net.sourceforge.pmd.lang.rule.RuleViolationFactory