@@ -10,7 +10,6 @@ import java.util.List;
 import java.util.Random;
 
 import junit.framework.JUnit4TestAdapter;
-import net.sourceforge.pmd.MockRule;
 import net.sourceforge.pmd.Rule;
 import net.sourceforge.pmd.RuleContext;
 import net.sourceforge.pmd.RuleViolation;
@@ -18,6 +17,7 @@ import net.sourceforge.pmd.RuleViolationComparator;
 import net.sourceforge.pmd.lang.java.ast.DummyJavaNode;
 import net.sourceforge.pmd.lang.java.rule.JavaRuleViolation;
 import net.sourceforge.pmd.lang.java.symboltable.SourceFileScope;
+import net.sourceforge.pmd.lang.rule.MockRule;
 
 import org.junit.Test;
 
