@@ -10,7 +10,6 @@ import java.util.Set;
 
 import net.sourceforge.pmd.Rule;
 import net.sourceforge.pmd.RuleContext;
-import net.sourceforge.pmd.RuleReference;
 import net.sourceforge.pmd.lang.ast.Node;
 import net.sourceforge.pmd.util.Benchmark;
 
