@@ -4,8 +4,8 @@ import java.io.IOException;
 import java.io.StringWriter;
 import java.io.Writer;
 
-import net.sourceforge.pmd.DataSource;
 import net.sourceforge.pmd.Report;
+import net.sourceforge.pmd.util.datasource.DataSource;
 
 public abstract class AbstractRenderer implements Renderer {
 
